--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -196,6 +196,9 @@ waves {
     create-alias {
       WAVES = 100000
     }
+    contend-slots {
+      WAVES = 10000000
+    }
   }
 
   # Matcher settings
